[gd_scene load_steps=8 format=3 uid="uid://cly7okgclnluq"]

[ext_resource type="Script" path="res://Scripts/squid_ink_bubble.gd" id="1_0nnq8"]
[ext_resource type="Texture2D" uid="uid://rhjkxb346ipi" path="res://Assets/VFX/SquidInkbubble.png" id="2_1eoya"]

[sub_resource type="Animation" id="Animation_ishrj"]
resource_name = "inkshot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.08, 0.04)]
}

[sub_resource type="Animation" id="Animation_de7lw"]
resource_name = "inkhit"

[sub_resource type="Animation" id="Animation_33oha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vv338"]
_data = {
"RESET": SubResource("Animation_33oha"),
"inkhit": SubResource("Animation_de7lw"),
"inkshot": SubResource("Animation_ishrj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2rpbe"]
radius = 7.0

[node name="Ink Bubble" type="Node2D"]
script = ExtResource("1_0nnq8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vv338")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.04)
texture = ExtResource("2_1eoya")
hframes = 5

[node name="InkCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InkCollision"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_2rpbe")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1.5)
scale = Vector2(0.5, 0.45)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="InkCollision" to="." method="_on_ink_collision_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
